--- a/src/style.css
+++ b/src/style.css
@@ -1,13 +1,31 @@
 #zdog-canvas {
-    background: #fdb;
-    cursor: move;
-    position: absolute;
-    left: 5px;
-    bottom: 5px;
-    animation-name: animation1;
-    animation-duration: 2s;
-  }  
-  
-  body {
-    background-color: #fdb;
-  }
+  background: #fdb;
+  cursor: move;
+  position: absolute;
+  left: 5px;
+  bottom: 5px;
+  animation-name: animation1;
+  animation-duration: 2s;
+  z-index: -1;
+}
+
+body {
+  background-color: #fdb;
+}
+#bulle {
+  margin-left: 250px;
+  margin-top: 200px;
+  border-radius: 30px;
+  border: 5px solid #ea0;
+  width: 200px;
+  height: 150px;
+  animation-name: anim;
+  animation-duration: 4s;
+}
+
+#annee {
+  background-color: aqua;
+  margin-left: 50%;
+  margin-right: auto;
+  margin-bottom: 20%;
+}
