--- a/src/style.css
+++ b/src/style.css
@@ -23,12 +23,43 @@ body {
   animation-duration: 4s;
 }
 
+#bulleH {
+  margin-right: 250px;
+  margin-top: 200px;
+  border-radius: 30px;
+  border: 5px solid #ea0;
+  width: 200px;
+  height: 150px;
+  animation-name: anim;
+  animation-duration: 4s;
+}
+
 #annee {
   font-size: 40px;
   display: inline-block;
   color: #636;
-  margin-top: 350px;
+  margin-top: 215px;
   margin-right: auto;
-  margin-left: 40%;
+  margin-left: 35%;
   margin-bottom: 50px;
+}
+
+#titre {
+  font-size: 35px;
+  display: inline-block;
+  color: #636;
+  margin-top: 100px;
+  margin-right: auto;
+  margin-left: 5%;
+  margin-bottom: 30px;
+}
+
+#source {
+  font-size: 15px;
+  display: inline-block;
+  color: #636;
+  margin-top: 150px;
+  margin-right: auto;
+  margin-left: 0%;
+  margin-bottom: 40px;
 }
