--- a/src/style.css
+++ b/src/style.css
@@ -12,7 +12,7 @@ body {
 }
 #bulle {
   margin-left: 250px;
-  margin-top: 200px;
+  margin-top: 5px;
   border-radius: 30px;
   border: 5px solid #ea0;
   width: 200px;
@@ -20,8 +20,9 @@ body {
 }
 
 #bulleH {
-  margin-right: 250px;
-  margin-top: 200px;
+  margin-left: 630px;
+  margin-top: 0px;
+  margin-bottom: 200px;
   border-radius: 30px;
   border: 5px solid #ea0;
   width: 200px;
@@ -32,19 +33,19 @@ body {
   font-size: 40px;
   display: inline-block;
   color: #636;
-  margin-top: 215px;
+  margin-top: 0px;
   margin-right: auto;
   margin-left: 35%;
-  margin-bottom: 50px;
+  margin-bottom: 10px;
 }
 
 #titre {
   font-size: 35px;
   display: inline-block;
   color: #636;
-  margin-top: 100px;
+  margin-top: 20px;
   margin-right: auto;
-  margin-left: 5%;
+  margin-left: 3%;
   margin-bottom: 30px;
 }
 
@@ -52,7 +53,7 @@ body {
   font-size: 15px;
   display: inline-block;
   color: #636;
-  margin-top: 150px;
+  margin-top: 0px;
   margin-right: auto;
   margin-left: 0%;
   margin-bottom: 40px;
@@ -62,17 +63,17 @@ body {
   font-size: 40px;
   display: inline-block;
   color: #636;
-  margin-top: 100px;
+  margin-top: 55px;
   margin-right: auto;
-  margin-left: 50%;
+  margin-left: 23%;
   margin-bottom: 40px;
 }
 #pourcentageH {
   font-size: 40px;
   display: inline-block;
   color: #636;
-  margin-top: 100px;
+  margin-top: 55px;
   margin-right: auto;
-  margin-left: 50%;
+  margin-left: 23%;
   margin-bottom: 40px;
 }
