--- a/src/style.css
+++ b/src/style.css
@@ -33,11 +33,12 @@ body {
 
 #annee {
   font-size: 40px;
-  font-family: 'Trebuchet MS';
+  font-family: "Trebuchet MS";
   display: inline-block;
   position: relative;
+  top: 50px;
   color: #636;
-  margin-top: 0px;
+  margin-top: 30px;
   margin-right: auto;
   margin-left: 35%;
   margin-bottom: 10px;
@@ -45,7 +46,7 @@ body {
 
 #titre {
   font-size: 35px;
-  font-family: 'Trebuchet MS';
+  font-family: "Trebuchet MS";
   font-weight: bold;
   display: inline-block;
   position: relative;
@@ -58,11 +59,11 @@ body {
 
 #source {
   font-size: 20px;
-  font-family: 'Trebuchet MS';
+  font-family: "Trebuchet MS";
   display: inline-block;
   color: #636;
   position: relative;
-  margin-top: 0px;
+  top: 100px;
   margin-right: auto;
   margin-left: 0%;
   margin-bottom: 40px;
@@ -70,7 +71,7 @@ body {
 
 .stylePourcentage {
   font-size: 40px;
-  font-family: 'Trebuchet MS';
+  font-family: "Trebuchet MS";
   display: inline-block;
   color: #636;
   margin-top: 27%;
